--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -31,7 +31,9 @@
 {% endblock %}
 
 {% block javascript %}
-    <script type="application/javascript">
-        BabyBuddy.Dashboard.watch('dashboard-child');
-    </script>
+    {% if user.settings.dashboard_refresh_rate %}
+        <script type="application/javascript">
+            BabyBuddy.Dashboard.watch('dashboard-child', {{ user.settings.dashboard_refresh_rate_milliseconds }});
+        </script>
+    {% endif %}
 {% endblock %}
