--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load static %}
+{% load static thumbnail %}
 
 {% block title %}{{ object }}{% endblock %}
 
@@ -12,7 +12,12 @@
     <div class="child-detail-column">
         <div class="row">
             <div class="col-lg-4 col-md-6 pb-3 text-center">
-                <img src="{% static 'babybuddy/img/core/child-placeholder.png' %}" class="child-photo img-fluid rounded-circle" />
+                {% if object.picture %}
+                    {% thumbnail object.picture 150x150 upscale crop as thumb %}
+                    <img src="{{ thumb.url }}" class="child-photo img-fluid rounded-circle" />
+                {% else %}
+                    <img src="{% static 'babybuddy/img/core/child-placeholder.png' %}" class="child-photo img-fluid rounded-circle" />
+                {% endif %}
                 <div class="child-name display-4">{{ object }}</div>
                 <p class="lead">
                     Born <span class="text-secondary">{{ object.birth_date }}</span><br/>
