--- a/babybuddy/templates/babybuddy/form.html
+++ b/babybuddy/templates/babybuddy/form.html
@@ -1,7 +1,7 @@
 {% load widget_tweaks %}
 
 <div class="container-fluid">
-    <form role="form" method="post">
+    <form role="form" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% if form.non_field_errors %}
             {% for error in form.non_field_errors %}
