--- a/babybuddy/templates/babybuddy/paginator.html
+++ b/babybuddy/templates/babybuddy/paginator.html
@@ -1,10 +1,12 @@
+{% load babybuddy_tags %}
+
 {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
 
             {% if page_obj.has_previous %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                    <a class="page-link" href="{% relative_url 'page' page_obj.previous_page_number %}" aria-label="Previous">
                         <i class="icon icon-chevron-left" aria-hidden="true"></i>
                         <span class="sr-only">Previous</span>
                     </a>
@@ -14,14 +16,14 @@
             {% for num in page_obj.paginator.page_range %}
                 {% if num > page_obj.number|add:"-3" and num < page_obj.number|add:"3" %}
                     <li class="page-item{% if num == page_obj.number %} active{% endif %}">
-                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                        <a class="page-link" href="{% relative_url 'page' num %}">{{ num }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
 
             {% if page_obj.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                    <a class="page-link" href="{% relative_url 'page' page_obj.next_page_number %}" aria-label="Next">
                         <i class="icon icon-chevron-right" aria-hidden="true"></i>
                         <span class="sr-only">Next</span>
                     </a>
