--- a/dashboard/templates/cards/sleep_naps_day.html
+++ b/dashboard/templates/cards/sleep_naps_day.html
@@ -14,5 +14,5 @@
 {% endblock %}
 
 {% block content %}
-    {% if total.duration__sum %}{{ total.duration__sum|duration_string }}{% endif %}
+    {% if total %}{{ total|duration_string }}{% endif %}
 {% endblock %}
