--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -14,14 +14,14 @@
                 {% if info.wet_pct > 0 %}
                     <div class="progress-bar bg-primary lead"
                          role="progressbar"
-                         style="width: {{ info.wet_pct }}%;">{{ info.wet }}&nbsp;wet</div>
+                         style="width: {{ info.wet_pct }}%;">{{ info.wet|floatformat:'0' }}&nbsp;wet</div>
                 {% endif %}
 
                 {% if info.solid_pct > 0 %}
                     <div class="progress-bar bg-secondary lead"
                          role="progressbar"
                          style="width: {{ info.solid_pct }}%;">
-                        <strong>{{ info.solid }}</strong>&nbsp;solid</div>
+                        <strong>{{ info.solid|floatformat:'0' }}</strong>&nbsp;solid</div>
                 {% endif %}
             </div>
             <div class="text-center text-light small">
