--- a/babybuddy/static_src/scss/icons.scss
+++ b/babybuddy/static_src/scss/icons.scss
@@ -20,6 +20,10 @@
     @extend .fa-camera;
 }
 
+.icon-chat {
+    @extend .fa-users;
+}
+
 .icon-chevron-left {
     @extend .fa-chevron-left;
 }
@@ -82,6 +86,10 @@
 
 .icon-sleep {
     @extend .fa-bed;
+}
+
+.icon-source {
+    @extend .fa-code-fork;
 }
 
 .icon-stop {
