--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -173,19 +173,27 @@
                            aria-expanded="false"><i class="icon icon-user" aria-hidden="true"></i> {{ request.user }}
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-user-menu-link">
+                            <h6 class="dropdown-header">User</h6>
                             <a href="{% url 'user-settings' %}" class="dropdown-item">Settings</a>
-                            <div class="dropdown-divider"></div>
+                            <a href="{% url 'logout' %}" class="dropdown-item">Logout</a>
+                            <h6 class="dropdown-header">Site</h6>
                             <a href="{% url 'api:api-root' %}"
                                class="dropdown-item"
                                target="_blank">API Browser</a>
                             {% if request.user.is_staff %}
                                 <a href="{% url 'admin:index' %}"
                                    class="dropdown-item"
-                                   target="_blank">Site Admin</a>
+                                   target="_blank">Backend Admin</a>
                             {% endif %}
-                            <div class="dropdown-divider"></div>
-                            <a href="{% url 'logout' %}"
-                               class="dropdown-item">Logout</a>
+                            <h6 class="dropdown-header">Support</h6>
+                            <a href="https://github.com/cdubz/babybuddy"
+                               class="dropdown-item"
+                               target="_blank">
+                                <i class="icon icon-source" aria-hidden="true"></i> Source Code</a>
+                            <a href="https://gitter.im/babybuddy/Lobby"
+                               class="dropdown-item"
+                               target="_blank">
+                                <i class="icon icon-chat" aria-hidden="true"></i> Chat / Support</a>
                         </div>
                     </li>
                 </ul>
