Add a user password change form.

--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -175,6 +175,7 @@
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-user-menu-link">
                             <h6 class="dropdown-header">User</h6>
                             <a href="{% url 'user-settings' %}" class="dropdown-item">Settings</a>
+                            <a href="{% url 'user-password' %}" class="dropdown-item">Password</a>
                             <a href="{% url 'logout' %}" class="dropdown-item">Logout</a>
                             <h6 class="dropdown-header">Site</h6>
                             <a href="{% url 'api:api-root' %}"
